  on fields as tooltip per default. On behaviour can be reestablished by
  setting the display attribute of the help to "text".
- Remove default "Reset" form button. Asking people using forms shows
  that almost nobody is using a reset button in the forms. If you want
  to have a reset button than you need to define a custom button bar now
  in the form.

0.12
====
- Extract text form button for internationalisation.
- Fixed affix of outline sidebar on forms.
- Implement remove_filtered for dropdown elements too.

0.11
====
- Added support for metadata sections in the form configuration. This metadata
  is used together with the entity, and layout sections to generate a
  specification of the forms.
- Added formspec.py command to generate the speficication. 

0.10
====
- Modified "onchange" event for textfield. Detect if user stopped typing in
  a textfield and trigger evaluation of rules after 750ms automatically.

0.9.13
======
- Fixed type detection for VARCHAR fields.

0.9.12
======
- Raise deserialisation error when time format ist wrong.

0.9.11
======
- Performance Improvement: Do not evaluate all conditionals when a values
  changes in the form. Only evalute the conditionals which are affacted by the
  change.

0.9.10
======
- Enabled translation of the error messages while type conversion to python.
- Limit integer data type to 4byte (which is the value for integer datatype in
  a postgres database.)

0.9.9
=====
- Relaxed email validation. Removed client side checks for input values and
  removed server side validation of the local part of an email address.
- Fixed (workaround) getting default values for checkboxes in mako template.

0.9.8
=====
- Implemented server side evaluation of conditionals while rendering.
- Added interval type.
- Added placeholder configuration variable
- Implemented brabbel expressions in default value using "%" (Useful to get
  the current date.)
- Moved converters for serialisation and deserialisation into its own module